# AvianVisitors

./: .dockerignore  .gitignore  README.md  docker-compose.yml
.github/: dependabot.yml
birdnet/: birdnet_analysis.py  birdnet_recording.sh  createdb.sh  daily_plot.py  install_config.sh  livestream.sh  plotly_streamlit.py  pyproject.toml  send_test_notification.py  species.py
birdnet/model/: BirdNET_6K_GLOBAL_MODEL_Labels.txt  BirdNET_GLOBAL_6K_V2.4_Model_FP16_Labels.txt
birdnet/model/l18n/: labels_af.json  labels_ar.json  labels_ca.json  labels_cs.json  labels_da.json  labels_de.json  labels_en.json  labels_es.json  labels_et.json  labels_fi.json  labels_fr.json  labels_hr.json  labels_hu.json  labels_id.json  labels_is.json  labels_it.json  labels_ja.json  labels_ko.json  labels_lt.json  labels_lv.json  labels_nl.json  labels_no.json  labels_pl.json  labels_pt.json  labels_ro.json  labels_ru.json  labels_sk.json  labels_sl.json  labels_sr.json  labels_sv.json  labels_th.json  labels_tr.json  labels_uk.json  labels_vi.json  labels_zh_CN.json  labels_zh_TW.json
birdnet/tests/: helpers.py  test_analysis.py  test_apprise_notifications.py
birdnet/utils/: analysis.py  classes.py  db.py  helpers.py  maintainer.py  models.py  notifications.py  reporting.py
docker/: Caddyfile  Dockerfile  entrypoint.sh  php-fpm-pool.conf  supervisord.conf
docs/: development.md  docker.md  translations.md
scripts/: install_services.sh  update_caddyfile.sh
webui/: .oxfmtrc.json  .oxlintrc.json  (+3 more)
webui/generate/: build_masks.py  cutout.py  pregen.py  pyproject.toml  verify.py
(+32 files in other folders)
