[project]
name = "avianvisitors-generation"
version = "0.0.1"
description = "Gemini illustration + BiRefNet cutout pipeline for the AvianVisitors collage."
requires-python = ">=3.11"
dependencies = [
    "pillow>=10.0",
    "rembg>=2.0.76",
    "onnxruntime>=1.16",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 160
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E402", "E741"]

[tool.ruff.lint.per-file-ignores]
"verify.py" = ["E501"]
